--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "csv-string": "^4.0.1",
     "csv-stringify": "^5.5.1",
+    "file-system": "^2.2.2",
     "fs": "0.0.1-security",
     "puppeteer": "^5.2.1"
   }
